--- a/index.html
+++ b/index.html
@@ -6,50 +6,70 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" /> -->
   <link rel="stylesheet" href="assets/css/style.css" />
   <title>Weather Dashboard</title>
 </head>
 
 <body>
   <header class="container-fluid text-center text-white bg-dark p-2 weather-header">
-    <h1>Weather Dashboard</h1>
+    <div id="city">
+      <div id="city-icon"><i class="fa-solid fa-location-dot"></i></div>
+      <div id="city-name"></div>
+    </div>
+    <form id="search-form" class="form">
+      <div class="form-inline form-group search">
+        <div class="input-group">
+          <input class="form-input weather-search" type="text" id="search-input" placeholder="Search city..."
+            aria-labelledby="form-heading" aria-controls="today forecast" />
+          <button type="submit" class="btn search-button" id="search-button" aria-label="submit search">
+            Search
+          </button>
+        </div>
+      </div>
+    </form>
   </header>
-
+  <div id="notification"></div>
   <!-- max-width for ultra wide resolutions -->
   <div class="container-fluid" style="max-width: 1400px">
     <div class="row">
       <aside class="col-lg-3 pb-3">
         <h2 id="form-heading" class="mt-1 h3 form-label">
-          Search for a City:
+          Today
         </h2>
-        <form id="search-form" class="form">
-          <div class="form-inline form-group">
-            <div class="input-group">
-              <input class="form-input weather-search" type="text" id="search-input" placeholder="City name"
-                aria-labelledby="form-heading" aria-controls="today forecast" />
-              <div class="input-group-append">
-                <button type="submit" class="btn search-button" id="search-button" aria-label="submit search">
-                  Search
-                </button>
-                <hr class="hr weather-hr" />
-              </div>
-            </div>
-          </div>
-        </form>
-        <div class="list-group" id="history"></div>
+        <div class="list-group" id="history">
+          <div class="previousCity">Kranj</div>
+          <div class="previousCity">Ljubljana</div>
+          <div class="previousCity">Berlin</div>
+          <div class="previousCity">Paris</div>
+        </div>
       </aside>
 
       <div class="col-lg-9 pb-3">
         <section id="today" class="mt-3" role="region" aria-live="polite">
-          <!-- <div class="card" style="width: 18rem;">
-            <img class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+          <div class="card" style="width: 18rem;">
+            <div class="weather_header">
+              <div class="weather_day">Friday</div>
+              <div class="weather_time">23:12 PM</div>
             </div>
-          </div> -->
+            <div class="card_body">
+              <div class="weather_left">
+                <h1 class="weather_temp">16°C</h1>
+                <div class="weather_details">
+                  <div class="weather_feel">Real Feel: </div>
+                  <div class="weather_wind">Wind: </div>
+                  <div class="weather_pressure">Pressure: </div>
+                  <div class="weather_humidity">Humidity: </div>
+                </div>
+              </div>
+              <div class="weather_right">
+                <img class="weather_icon" alt="Weather icon">
+                <div class="weather_details">
+                  <div class="weather_wind">Sunrise: </div>
+                  <div class="weather_wind">Sunset: </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
         
         <section id="forecast" class="row mt-3" role="region" aria-live="polite">
@@ -70,6 +90,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js"></script>
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <!-- Fontawesome -->
+  <!-- <script src="https://kit.fontawesome.com/3894c1dcb1.js" crossorigin="anonymous"></script> -->
   <script src="assets/js/actions.js"></script>
 </body>
 
