--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <script src="https://kit.fontawesome.com/3894c1dcb1.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="assets/css/style.css" />
   <title>Weather Dashboard</title>
 </head>
@@ -36,51 +37,18 @@
         <h2 id="form-heading" class="mt-1 h3 form-label">
           Today
         </h2>
-        <div class="list-group" id="history">
-          <div class="previousCity">Kranj</div>
-          <div class="previousCity">Ljubljana</div>
-          <div class="previousCity">Berlin</div>
-          <div class="previousCity">Paris</div>
-        </div>
       </aside>
-
       <div class="col-lg-9 pb-3">
         <section id="today" class="mt-3" role="region" aria-live="polite">
-          <div class="card" style="width: 18rem;">
-            <div class="weather_header">
-              <div class="weather_day">Friday</div>
-              <div class="weather_time">23:12 PM</div>
-            </div>
-            <div class="card_body">
-              <div class="weather_left">
-                <h1 class="weather_temp">16°C</h1>
-                <div class="weather_details">
-                  <div class="weather_feel">Real Feel: </div>
-                  <div class="weather_wind">Wind: </div>
-                  <div class="weather_pressure">Pressure: </div>
-                  <div class="weather_humidity">Humidity: </div>
-                </div>
-              </div>
-              <div class="weather_right">
-                <img class="weather_icon" alt="Weather icon">
-                <div class="weather_details">
-                  <div class="weather_wind">Sunrise: </div>
-                  <div class="weather_wind">Sunset: </div>
-                </div>
-              </div>
-            </div>
+          <div class="list-group" id="history">
+            <div class="previousCity">Kranj</div>
+            <div class="previousCity">Ljubljana</div>
+            <div class="previousCity">Berlin</div>
+            <div class="previousCity">Paris</div>
           </div>
         </section>
-        
+
         <section id="forecast" class="row mt-3" role="region" aria-live="polite">
-          <!-- <div class="card" style="width: 18rem;">
-            <img class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div> -->
         </section>
       </div>
     </div>
