--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en-gb">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,11 +9,10 @@
   <link rel="stylesheet" href="assets/css/style.css" />
   <title>Weather Dashboard</title>
 </head>
-
 <body>
   <header class="container-fluid text-center text-white bg-dark p-2 weather-header">
     <div id="city">
-      <div id="city-icon"><i class="fa-solid fa-location-dot"></i></div>
+      <div id="city-icon"></div>
       <div id="city-name"></div>
     </div>
     <form id="search-form" class="form">
@@ -34,20 +32,11 @@
   <div class="container-fluid" style="max-width: 1400px">
     <div class="row">
       <aside class="col-lg-3 pb-3">
-        <h2 id="form-heading" class="mt-1 h3 form-label">
-          Today
-        </h2>
+        <h2 id="form-heading" class="mt-1 h3 form-label"></h2>
       </aside>
       <div class="col-lg-9 pb-3">
-        <section id="today" class="mt-3" role="region" aria-live="polite">
-          <div class="list-group" id="history">
-            <div class="previousCity">Kranj</div>
-            <div class="previousCity">Ljubljana</div>
-            <div class="previousCity">Berlin</div>
-            <div class="previousCity">Paris</div>
-          </div>
-        </section>
-
+        <section id="today" class="mt-3" role="region" aria-live="polite"></section>
+        <section id="history" class="mt-3" role="region" aria-live="polite">
         <section id="forecast" class="row mt-3" role="region" aria-live="polite">
         </section>
       </div>
