--- a/index.html
+++ b/index.html
@@ -31,14 +31,20 @@
   <!-- max-width for ultra wide resolutions -->
   <div class="container-fluid" style="max-width: 1400px">
     <div class="row">
-      <aside class="col-lg-3 pb-3">
-        <h2 id="form-heading" class="mt-1 h3 form-label"></h2>
-      </aside>
       <div class="col-lg-9 pb-3">
-        <section id="today" class="mt-3" role="region" aria-live="polite"></section>
-        <section id="history" class="mt-3" role="region" aria-live="polite">
-        <section id="forecast" class="row mt-3" role="region" aria-live="polite">
+        <section>
+          <h2 id="form-heading" class="mt-1 h3 form-label"></h2>
         </section>
+        <section id="top">
+        <div id="today" class="mt-3" role="region" aria-live="polite"></div>
+        <div id="history" class="mt-3" role="region" aria-live="polite">
+          <span>Kranj</span>
+          <span>Sydney</span>
+          <span>Oaxaca</span>
+          <span>London</span>
+        </div>
+        </section>
+        <section id="forecast" class="mt-3" role="region" aria-live="polite"></section>
       </div>
     </div>
   </div>
