add previously searched cities, fix mobile display

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         <section id="top">
         <div id="today" class="mt-3" role="region" aria-live="polite"></div>
         <div id="history" class="mt-3" role="region" aria-live="polite">
-          <span>Kranj</span>
+          <!-- <span>Kranj</span>
           <span>Sydney</span>
           <span>Oaxaca</span>
-          <span>London</span>
+          <span>London</span> -->
         </div>
         </section>
         <section id="forecast" class="mt-3" role="region" aria-live="polite"></section>
